--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://use.typekit.net/jmk3xov.css');
 
+body {
+  overflow-x: hidden;
+}
+
 canvas {
   position: fixed;
   top: 0;
@@ -8,7 +12,7 @@ canvas {
 
 :root {
   --dark-bg: rgba(15, 15, 15, 0.95);
-  --spacing: 350px;
+  --spacing: 380px;
 
   font-family: brandon-grotesque, sans-serif;
   font-weight: 400;
@@ -68,7 +72,7 @@ section {
 blockquote {
   margin: 0;
   padding: 0;
-  grid-column: 2 / span 9;
+  grid-column: 2 / span 6;
   margin-bottom: var(--spacing);
 }
 
@@ -78,6 +82,11 @@ blockquote p {
   font-size: 4rem;
   display: inline;
   line-height: 1;
+}
+
+blockquote p.last {
+  position: relative;
+  top: -5rem;
 }
 
 .left {
